--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,11 @@
     <string name="titulo_higi">HIGIENE</string>
     <string name="titulo_dica">DICAS</string>
 
+    // Tela dos tipos
+    <string name="rotulo_tipos">TIPOS</string>
+    <string name="nome_dog">CÃES</string>
+    <string name="nome_cat">GATOS</string>
+    <string name="nome_bird">PÁSSAROS</string>
+    <string name="nome_habbit">COELHOS</string>
+    <string name="nome_roedor">ROEDORES</string>
 </resources>
