Finalizando (add icone e fazendo ultimos ajustes)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     // Strings globais
-    <string name="app_name">App_Sustentavel</string>
+    <string name="app_name">Connect Pet</string>
     <string name="Base">Base para outros elementos</string>
 
     // Descrição
